--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,9 @@
   font-family: "poppins", sans-serif;
   box-sizing: border-box;
 }
-
+h2 {
+  color: aliceblue;
+}
 body {
   width: 100%;
   height: 100vh;
@@ -115,7 +117,12 @@ nav {
 
 section {
   width: 100%;
-  height: 90vh;
+  height: 100vh;
+  display: flex;
+  display: flex; /* فلکس برای وسط‌چین کردن */
+  flex-direction: column; /* متن‌ها زیر هم */
+  justify-content: center; /* وسط عمودی */
+  align-items: center; /* وسط افقی */
 }
 
 .main-container {
@@ -272,7 +279,7 @@ section {
   }
 
   .main-container .image {
-    z-index: 1;
+    z-index: -1;
     width: 40%;
     height: 40%;
     margin-top: 30px;
