--- a/css/style.css
+++ b/css/style.css
@@ -450,19 +450,18 @@ section {
 .skill-card .rating {
   position: relative;
   width: 100%;
-  height: 100%;
-  /* background-color: aqua; */
+  height: 100%; /* background-color: aqua; */
 }
 
 .skill-card .rating .block {
-  /*3:40*/
+  /* 3:40 */
   position: absolute;
   width: 2px;
   height: 15px;
   background: #ffffff;
   left: 50%;
-  transform-origin: 50% 100px; /*قطر*/
-  /* transform: rotate(15deg); */
+  transform-origin: 50% 60px;
+  transform: rotate(15deg);
   opacity: 0;
   animation: animate 0.1s linear forwards;
 }
@@ -473,9 +472,10 @@ section {
   }
 }
 
-.skill-card .rating .block:nth-child(-n + 91) {
-  background-color: rgb(255, 0, 0);
-  box-shadow: 0 0 15px red, 0 0 30px red;
+.skill-card .rating .block:nth-child(-n + 41) {
+  /* chat gpt is not dumb you are */
+  background-color: aqua;
+  box-shadow: 0 0 15px aqua, 0 0 30px aqua;
 }
 .skill-card .rating h2 {
   position: absolute;
@@ -490,7 +490,7 @@ section {
 }
 
 .skill-card .rating h2 span {
-  font-size: 2.5em;
+  font-size: 1.5em;
   font-weight: 700;
 }
 
